sumo/tests/netconvert/errors/XML/broken_edge/edge#shape__false1e/errors.netconvert
Error: The shape of edge '1' has only one entry.
Quitting (on error).
